# sora

./: .gitmodules  CMakeLists.txt  SORA.docx  cube.cpp  cube.h  main.cpp  rasterizer.cpp  rasterizer.h  transformations.h  triangle.cpp  triangle.h  utilities.cpp  utilities.h  vertex.h
include/: camera.h  cube.h  defines.h  illuminare.h  primitiveFactory.h  rasterizer.h  renderController.h  texture.h  utils.h
src/: cube.cpp  main.cpp  rasterizer.cpp  renderController.cpp  texture.cpp  vertex.cpp
